--- a/Laboratory/Base.lproj/Main.storyboard
+++ b/Laboratory/Base.lproj/Main.storyboard
@@ -182,11 +182,118 @@
                     <connections>
                         <outlet property="labEquipmentTV" destination="d9j-bD-7Oh" id="KUh-se-TgZ"/>
                         <outlet property="searchBar" destination="wNM-zi-urh" id="OG1-mX-58M"/>
+                        <segue destination="cly-ig-uLQ" kind="show" id="sx8-EH-ggk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ase-Ob-Y7i" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4690.3999999999996" y="-398.27586206896552"/>
+        </scene>
+        <!--Lab Equipment EditVC-->
+        <scene sceneID="8c5-Q3-bQ6">
+            <objects>
+                <viewController id="cly-ig-uLQ" customClass="LabEquipmentEditVC" customModule="Laboratory" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="BVV-oX-ftt">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="1000"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Exs-K7-43T">
+                                <rect key="frame" x="0.0" y="88" width="375" height="878"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sUh-Bc-3QV" userLabel="contentView">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="878"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Using:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uq6-Oy-kOc">
+                                                <rect key="frame" x="9.9999999999999964" y="15.999999999999998" width="48.666666666666657" height="20.333333333333329"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fU8-2c-DPk">
+                                                <rect key="frame" x="106.66666666666667" y="8" width="30.000000000000014" height="33"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                <state key="normal" title="-"/>
+                                                <connections>
+                                                    <action selector="decreaseEquipment:" destination="cly-ig-uLQ" eventType="touchUpInside" id="Dxz-Mg-iNs"/>
+                                                </connections>
+                                            </button>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0Hb-sC-Ovu">
+                                                <rect key="frame" x="146.66666666666666" y="8" width="48" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="48" id="1LA-bi-pLC"/>
+                                                </constraints>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RYc-pN-93o">
+                                                <rect key="frame" x="204.66666666666666" y="8" width="30" height="33"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                <state key="normal" title="+"/>
+                                                <connections>
+                                                    <action selector="increaseEquipment:" destination="cly-ig-uLQ" eventType="touchUpInside" id="gRo-9Q-CcB"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EoN-vV-ZN5">
+                                                <rect key="frame" x="224.66666666666666" y="8" width="61.999999999999972" height="33"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <state key="normal" title="Remove"/>
+                                                <connections>
+                                                    <action selector="removeEquipment:" destination="cly-ig-uLQ" eventType="touchUpInside" id="bU9-8S-9ZK"/>
+                                                </connections>
+                                            </button>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LTz-LL-nxc" customClass="EquipmentInfoView" customModule="Laboratory" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="36.333333333333314" width="375" height="841.66666666666674"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </view>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="LTz-LL-nxc" secondAttribute="trailing" id="474-lT-sbE"/>
+                                            <constraint firstItem="RYc-pN-93o" firstAttribute="top" secondItem="sUh-Bc-3QV" secondAttribute="top" constant="8" id="8fD-U0-34x"/>
+                                            <constraint firstItem="Uq6-Oy-kOc" firstAttribute="top" secondItem="sUh-Bc-3QV" secondAttribute="top" constant="16" id="FHa-F1-Z1E"/>
+                                            <constraint firstItem="RYc-pN-93o" firstAttribute="trailing" secondItem="EoN-vV-ZN5" secondAttribute="leading" constant="10" id="I7c-Cv-tDc"/>
+                                            <constraint firstItem="RYc-pN-93o" firstAttribute="leading" secondItem="0Hb-sC-Ovu" secondAttribute="trailing" constant="10" id="LCd-8A-0Hy"/>
+                                            <constraint firstItem="0Hb-sC-Ovu" firstAttribute="leading" secondItem="fU8-2c-DPk" secondAttribute="trailing" constant="10" id="MLo-bo-2Ts"/>
+                                            <constraint firstItem="Uq6-Oy-kOc" firstAttribute="leading" secondItem="sUh-Bc-3QV" secondAttribute="leading" constant="10" id="Pxg-kg-cMe"/>
+                                            <constraint firstItem="fU8-2c-DPk" firstAttribute="leading" secondItem="Uq6-Oy-kOc" secondAttribute="trailing" constant="48" id="Tgq-vC-wMa"/>
+                                            <constraint firstItem="LTz-LL-nxc" firstAttribute="top" secondItem="Uq6-Oy-kOc" secondAttribute="bottom" id="Z0w-88-wAi"/>
+                                            <constraint firstItem="EoN-vV-ZN5" firstAttribute="top" secondItem="sUh-Bc-3QV" secondAttribute="top" constant="8" id="Zcf-QM-RqV"/>
+                                            <constraint firstAttribute="bottom" secondItem="LTz-LL-nxc" secondAttribute="bottom" id="eGQ-3g-AYA"/>
+                                            <constraint firstItem="fU8-2c-DPk" firstAttribute="top" secondItem="sUh-Bc-3QV" secondAttribute="top" constant="8" id="g66-G5-SgX"/>
+                                            <constraint firstItem="LTz-LL-nxc" firstAttribute="leading" secondItem="sUh-Bc-3QV" secondAttribute="leading" id="oN8-46-8Yh"/>
+                                            <constraint firstItem="0Hb-sC-Ovu" firstAttribute="top" secondItem="sUh-Bc-3QV" secondAttribute="top" constant="8" id="uEa-as-CLU"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="sUh-Bc-3QV" firstAttribute="width" secondItem="Exs-K7-43T" secondAttribute="width" id="FwI-NE-uJy"/>
+                                    <constraint firstAttribute="trailing" secondItem="sUh-Bc-3QV" secondAttribute="trailing" id="KqM-Lh-iYL"/>
+                                    <constraint firstItem="sUh-Bc-3QV" firstAttribute="height" secondItem="Exs-K7-43T" secondAttribute="height" priority="250" id="PZo-cf-x93"/>
+                                    <constraint firstAttribute="bottom" secondItem="sUh-Bc-3QV" secondAttribute="bottom" id="anj-cZ-zaU"/>
+                                    <constraint firstItem="sUh-Bc-3QV" firstAttribute="top" secondItem="Exs-K7-43T" secondAttribute="top" id="d45-cf-alj"/>
+                                    <constraint firstItem="sUh-Bc-3QV" firstAttribute="leading" secondItem="Exs-K7-43T" secondAttribute="leading" id="qlZ-rU-WD3"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="bwq-FC-yeI" firstAttribute="trailing" secondItem="Exs-K7-43T" secondAttribute="trailing" id="D7D-JM-5pb"/>
+                            <constraint firstItem="bwq-FC-yeI" firstAttribute="bottom" secondItem="Exs-K7-43T" secondAttribute="bottom" id="HJG-UU-5j7"/>
+                            <constraint firstItem="Exs-K7-43T" firstAttribute="leading" secondItem="bwq-FC-yeI" secondAttribute="leading" id="PTG-N6-hYa"/>
+                            <constraint firstItem="Exs-K7-43T" firstAttribute="top" secondItem="bwq-FC-yeI" secondAttribute="top" id="lY8-yV-O6D"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="bwq-FC-yeI"/>
+                    </view>
+                    <size key="freeformSize" width="375" height="1000"/>
+                    <connections>
+                        <outlet property="equipmentInfoView" destination="LTz-LL-nxc" id="M32-dm-cgL"/>
+                        <outlet property="usingEquipmentTextField" destination="0Hb-sC-Ovu" id="iqc-Gm-3zr"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7M2-8R-0Bf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5492" y="-398"/>
         </scene>
         <!--Lab-->
         <scene sceneID="GVG-qi-G2A">
