--- a/Laboratory/Base.lproj/Main.storyboard
+++ b/Laboratory/Base.lproj/Main.storyboard
@@ -204,21 +204,21 @@
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="878"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Using:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uq6-Oy-kOc">
-                                                <rect key="frame" x="9.9999999999999964" y="15.999999999999998" width="48.666666666666657" height="20.333333333333329"/>
+                                                <rect key="frame" x="10" y="16" width="49" height="20.666666666666671"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fU8-2c-DPk">
-                                                <rect key="frame" x="106.66666666666667" y="8" width="30.000000000000014" height="33"/>
+                                                <rect key="frame" x="107" y="8" width="30" height="33"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                 <state key="normal" title="-"/>
                                                 <connections>
                                                     <action selector="decreaseEquipment:" destination="cly-ig-uLQ" eventType="touchUpInside" id="Dxz-Mg-iNs"/>
                                                 </connections>
                                             </button>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0Hb-sC-Ovu">
-                                                <rect key="frame" x="146.66666666666666" y="8" width="48" height="30"/>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0Hb-sC-Ovu">
+                                                <rect key="frame" x="147" y="8" width="48" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="48" id="1LA-bi-pLC"/>
                                                 </constraints>
@@ -227,7 +227,7 @@
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RYc-pN-93o">
-                                                <rect key="frame" x="204.66666666666666" y="8" width="30" height="33"/>
+                                                <rect key="frame" x="205" y="8" width="30" height="33"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                 <state key="normal" title="+"/>
                                                 <connections>
@@ -235,7 +235,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EoN-vV-ZN5">
-                                                <rect key="frame" x="224.66666666666666" y="8" width="61.999999999999972" height="33"/>
+                                                <rect key="frame" x="225" y="8" width="62" height="33"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <state key="normal" title="Remove"/>
                                                 <connections>
@@ -243,7 +243,7 @@
                                                 </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LTz-LL-nxc" customClass="EquipmentInfoView" customModule="Laboratory" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="36.333333333333314" width="375" height="841.66666666666674"/>
+                                                <rect key="frame" x="0.0" y="36.666666666666686" width="375" height="841.33333333333326"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </view>
                                         </subviews>
@@ -287,8 +287,11 @@
                     </view>
                     <size key="freeformSize" width="375" height="1000"/>
                     <connections>
+                        <outlet property="decreaseBtn" destination="fU8-2c-DPk" id="qse-Nq-cGC"/>
                         <outlet property="equipmentInfoView" destination="LTz-LL-nxc" id="M32-dm-cgL"/>
-                        <outlet property="usingEquipmentTextField" destination="0Hb-sC-Ovu" id="iqc-Gm-3zr"/>
+                        <outlet property="increaseBtn" destination="RYc-pN-93o" id="7F0-Ah-MEP"/>
+                        <outlet property="removeBtn" destination="EoN-vV-ZN5" id="7GG-ZX-URg"/>
+                        <outlet property="usingQuantityTextField" destination="0Hb-sC-Ovu" id="iqc-Gm-3zr"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7M2-8R-0Bf" userLabel="First Responder" sceneMemberID="firstResponder"/>
