LabEquipmentEdit: add Save Btn and it is only enabled when there is a change in Quantity. Also add a separating line

--- a/Laboratory/Base.lproj/Main.storyboard
+++ b/Laboratory/Base.lproj/Main.storyboard
@@ -242,27 +242,37 @@
                                                     <action selector="removeEquipment:" destination="cly-ig-uLQ" eventType="touchUpInside" id="bU9-8S-9ZK"/>
                                                 </connections>
                                             </button>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2oE-TH-1m4" userLabel="Separating Line">
+                                                <rect key="frame" x="10" y="46.666666666666657" width="355" height="1"/>
+                                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="1" id="9Cy-ZO-0kN"/>
+                                                </constraints>
+                                            </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LTz-LL-nxc" customClass="EquipmentInfoView" customModule="Laboratory" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="36.666666666666686" width="375" height="841.33333333333326"/>
+                                                <rect key="frame" x="0.0" y="49.666666666666686" width="375" height="828.33333333333326"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </view>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="LTz-LL-nxc" secondAttribute="trailing" id="474-lT-sbE"/>
+                                            <constraint firstItem="2oE-TH-1m4" firstAttribute="top" secondItem="Uq6-Oy-kOc" secondAttribute="bottom" constant="10" id="8Yu-cT-BkT"/>
                                             <constraint firstItem="RYc-pN-93o" firstAttribute="top" secondItem="sUh-Bc-3QV" secondAttribute="top" constant="8" id="8fD-U0-34x"/>
                                             <constraint firstItem="Uq6-Oy-kOc" firstAttribute="top" secondItem="sUh-Bc-3QV" secondAttribute="top" constant="16" id="FHa-F1-Z1E"/>
                                             <constraint firstItem="RYc-pN-93o" firstAttribute="trailing" secondItem="EoN-vV-ZN5" secondAttribute="leading" id="I7c-Cv-tDc"/>
+                                            <constraint firstAttribute="trailing" secondItem="2oE-TH-1m4" secondAttribute="trailing" constant="10" id="Ipt-8m-ih5"/>
                                             <constraint firstItem="RYc-pN-93o" firstAttribute="leading" secondItem="0Hb-sC-Ovu" secondAttribute="trailing" constant="10" id="LCd-8A-0Hy"/>
                                             <constraint firstItem="0Hb-sC-Ovu" firstAttribute="leading" secondItem="fU8-2c-DPk" secondAttribute="trailing" constant="10" id="MLo-bo-2Ts"/>
                                             <constraint firstItem="Uq6-Oy-kOc" firstAttribute="leading" secondItem="sUh-Bc-3QV" secondAttribute="leading" constant="10" id="Pxg-kg-cMe"/>
                                             <constraint firstItem="fU8-2c-DPk" firstAttribute="leading" secondItem="Uq6-Oy-kOc" secondAttribute="trailing" constant="48" id="Tgq-vC-wMa"/>
-                                            <constraint firstItem="LTz-LL-nxc" firstAttribute="top" secondItem="Uq6-Oy-kOc" secondAttribute="bottom" id="Z0w-88-wAi"/>
+                                            <constraint firstItem="LTz-LL-nxc" firstAttribute="top" secondItem="2oE-TH-1m4" secondAttribute="bottom" constant="2" id="Z0w-88-wAi"/>
                                             <constraint firstItem="EoN-vV-ZN5" firstAttribute="top" secondItem="sUh-Bc-3QV" secondAttribute="top" constant="8" id="Zcf-QM-RqV"/>
                                             <constraint firstAttribute="bottom" secondItem="LTz-LL-nxc" secondAttribute="bottom" id="eGQ-3g-AYA"/>
                                             <constraint firstItem="fU8-2c-DPk" firstAttribute="top" secondItem="sUh-Bc-3QV" secondAttribute="top" constant="8" id="g66-G5-SgX"/>
                                             <constraint firstItem="LTz-LL-nxc" firstAttribute="leading" secondItem="sUh-Bc-3QV" secondAttribute="leading" id="oN8-46-8Yh"/>
                                             <constraint firstItem="0Hb-sC-Ovu" firstAttribute="top" secondItem="sUh-Bc-3QV" secondAttribute="top" constant="8" id="uEa-as-CLU"/>
+                                            <constraint firstItem="2oE-TH-1m4" firstAttribute="leading" secondItem="sUh-Bc-3QV" secondAttribute="leading" constant="10" id="x7E-on-hrw"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -291,6 +301,7 @@
                         <outlet property="equipmentInfoView" destination="LTz-LL-nxc" id="M32-dm-cgL"/>
                         <outlet property="increaseBtn" destination="RYc-pN-93o" id="7F0-Ah-MEP"/>
                         <outlet property="removeBtn" destination="EoN-vV-ZN5" id="7GG-ZX-URg"/>
+                        <outlet property="separatingLine" destination="2oE-TH-1m4" id="hDl-8B-NHO"/>
                         <outlet property="usingQuantityTextField" destination="0Hb-sC-Ovu" id="iqc-Gm-3zr"/>
                     </connections>
                 </viewController>
